--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ h2, h3 {
     line-height: 30px;
     font-weight: 700;
     text-transform: uppercase;
+    text-shadow: 2px -2px 8px rgba(0, 0, 0, .5);
 }
 
 /* section_2 */
